@@ -1,0 +1,8 @@
+package test.listeners.factory;
+
+import org.testng.annotations.Test;
+
+public class SampleTestCase {
+  @Test
+  public void testMethod() {}
+}
